<resources>
    <string name="app_name">My Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pss">Forgot password?</string>
    <string name="add_account">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="asset_top">Asset Top</string>
    <string name="image">Image</string>
    <string name="tittle">Tittle</string>
    <string name="hallo">Hallo, $User</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="image_movie">Image Movie</string>
    <string name="nonton">Mau nonton apa?</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="enjoy">Enjoy your Movie</string>
    <string name="update">Update</string>
</resources>